# zksync-os-revm

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: evm.rs  handler.rs  lib.rs  precompiles.rs  spec.rs
src/api/: builder.rs  default_ctx.rs  exec.rs
src/precompiles/: calldata_view.rs  deployer.rs  gas_cost.rs  l1_messenger.rs  l2_base_token.rs  utils.rs  v1.rs  v2.rs
src/precompiles/v1/: deployer.rs  l1_messenger.rs  l2_base_token.rs  mod.rs
src/precompiles/v2/: deployer.rs  gas_cost.rs  l1_messenger.rs  l2_base_token.rs  mod.rs
src/transaction/: abstraction.rs
